<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNoteTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#26A69A"
            android:fontFamily="serif"
            android:maxWidth="250dp"
            android:maxHeight="40dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:text="@string/note_title"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvNoteDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#26A69A"
            android:fontFamily="sans-serif-medium"
            android:gravity="end"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:text="@string/note_date"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNoteDescription"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:maxWidth="370dp"
            android:maxHeight="390dp"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="0dp"
            android:paddingBottom="5dp"
            android:text="@string/note_description"
            android:textSize="18sp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/faArrow"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="false"
            android:foregroundGravity="bottom"
            android:rotation="180"
            app:backgroundTint="#F8F8F9"
            app:borderWidth="0dp"
            app:rippleColor="#F8F8F9"
            app:srcCompat="?attr/actionModeCloseDrawable" />

    </LinearLayout>

</LinearLayout>